force-app/main/default/objects/Medical_Facility__c/fields/closeHour__c.field-meta.xml
<CustomField>
    <fullName>closeHour__c</fullName>
    <label>closeHour</label>
    <type>DateTime</type>
</CustomField>