force-app/main/default/objects/Medical_Facility__c/fields/Doctors_List__c.field-meta.xml
<CustomField>
    <fullName>Doctors_List__c</fullName>
    <description>A list of Doctors in Medical Facility</description>
    <label>Doctors List</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Medical Facilitys</relationshipLabel>
    <relationshipName>Medical_Facilitys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>