force-app/main/default/objects/Medical_Facility__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Id used in intA database</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>