force-app/main/default/objects/Medical_Facility__c/fields/Geo_location__c.field-meta.xml
<CustomField>
    <fullName>Geo_location__c</fullName>
    <label>Geo location</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>