force-app/main/default/objects/Medical_Facility__c/fields/Insurance_required__c.field-meta.xml
<CustomField>
    <fullName>Insurance_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This facility accepts only patients that are insured.</description>
    <label>Insurance required</label>
    <type>Checkbox</type>
</CustomField>