force-app/main/default/objects/Medical_Facility__c/fields/openHours__c.field-meta.xml
<CustomField>
    <fullName>openHours__c</fullName>
    <label>openHour</label>
    <type>DateTime</type>
</CustomField>