force-app/main/default/objects/Medical_Facility__c/fields/Opening_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours__c</fullName>
    <label>Opening_Hours</label>
    <referenceTo>Opening_Hours__c</referenceTo>
    <relationshipLabel>Medical Facilitys</relationshipLabel>
    <relationshipName>Medical_Facilitys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>