force-app/main/default/objects/Medical_Facility__c/fields/Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours__c</fullName>
    <label>Operating_Hours__c</label>
    <referenceTo>Operating_Hours__c</referenceTo>
    <relationshipLabel>Medical Facilitys</relationshipLabel>
    <relationshipName>Medical_Facilitys</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>