force-app/main/default/objects/Medical_Facility__c/fields/Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_Number__c</fullName>
    <label>Street Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>